-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
-
b10
-
b16
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8204420 | 11.0.1 | Thomas Schatzl | P2 | Resolved | Fixed | team |
Across all applications and platforms tested.
- backported by
-
JDK-8204420 G1 footprint regressions in jdk11+10
-
- Resolved
-
- relates to
-
JDK-8196485 FromCardCache default card index can cause crashes
-
- Closed
-
-
JDK-8180415 Rebuild remembered sets during the concurrent cycle
-
- Resolved
-