src/hotspot/share/memory/padded.hpp
@@ -104,6 +104,8 @@ class Padded2DArray {
  public:
   // Creates an aligned padded 2D array.
   // The memory cannot be deleted since the raw memory chunk is not returned.
+  // Always uses mmap to reserve memory. Only the first few pages with the index to
+  // the rows are touched. Allocation size should be "large" to cover page overhead.
   static T** create_unfreeable(uint rows, uint columns, size_t* allocation_size = NULL);
 };
 
